--- a/Functional Programming/제너레이터와 이터레이터.md
+++ b/Functional Programming/제너레이터와 이터레이터.md
@@ -146,3 +146,16 @@ for (const a of odds(40)) console.log(a);
 ```
 
 ### 전개 연산자, 구조 분해, 나머지 연산자에서 제너레이터 사용하기
+```
+console.log(...odds(10));
+console.log([...odds(10), ...odds(20)]);
+
+const [head, ...tail] = odds(5);
+console.log(head);
+console.log(tail);
+
+const [a, b, ...rest] = odds(10);
+console.log(a);
+console.log(b);
+console.log(rest);
+```
