[ Functional Programming ] 읽기 좋은 코드로 변경

--- a/Functional Programming/8. go.md
+++ b/Functional Programming/8. go.md
@@ -34,3 +34,47 @@ const go = (...args) => reduce((a, f) => f(a), args);  // 완성형
 ```
 
 이렇게 생각을 진행해나가려면.. 연습이 많이 필요할 듯...
+
+
+### go를 사용해 읽기 좋은 코드로 변경하기
+map, filter, reduce를 중첩해서 코드를 작성했었는데 읽기 좋은 코드는 아니였다.
+
+```jsx
+const products = [
+    {name: '축구공', price: 15000},
+    {name: '야구공', price: 20000},
+    {name: '농구공', price: 15000},
+    {name: '볼링공', price: 30000},
+    {name: '당구공', price: 25000},
+]
+const add = (a, b) => a + b;
+
+reduce(
+    add, 
+    map(p => p.price, 
+        filter(p => p.price < 20000, products)
+    )
+);
+```
+
+이거를 go 함수를 사용하면 어떻게 진행되는지를 알 수 있는 코드로 변경할 수 있다.
+
+```jsx
+const products = [
+    {name: '축구공', price: 15000},
+    {name: '야구공', price: 20000},
+    {name: '농구공', price: 15000},
+    {name: '볼링공', price: 30000},
+    {name: '당구공', price: 25000},
+]
+const add = (a, b) => a + b;
+
+go(
+    products,
+    products => filter(p => p.price < 20000, products),
+    products => map(p => p.price, products),
+    prices => reduce(add, prices),
+    console.log
+)
+```
+코드 자체의 길이는 길어졌지만 어떤 의미로 코드를 작성했는지는 쉽게 파악을 할 수 있어졌다.
