--- a/HTTP/인터넷 프로토콜/3. UDP.md
+++ b/HTTP/인터넷 프로토콜/3. UDP.md
@@ -15,7 +15,8 @@
     - 조금 더 최적화를 하고 싶은 경우 TCP는 그대로 쓰고 UDP에 관련해서 애플리케이션 레벨에서 추가 작업을 하면 가능.
 
 ```
-💡 OS가 있고 OS위에 응용 애플리케이션(예를들면 브라우저)이 있고 웹 개발자는 이 응용 애플리케이션 위에서 작동하는 프로그램을 만듦. 브라우저의 기본 동작을 웹 개발자가 변경할 수 없기에 TCP/UDP에 대한 제어를 개발자가 할 순 없음.
+💡 OS가 있고 OS위에 응용 애플리케이션(예를들면 브라우저)이 있고 웹 개발자는 이 응용 애플리케이션 위에서 작동하는 프로그램을 만듦. 
+브라우저의 기본 동작을 웹 개발자가 변경할 수 없기에 TCP/UDP에 대한 제어를 개발자가 할 순 없음.
 직접 응용 애플리케이션을 제작한다면 이런 한계를 넘어 마음대로 사용할 수 있음.
 ```
 
