--- a/Javascript/1. 변수.md
+++ b/Javascript/1. 변수.md
@@ -66,7 +66,7 @@ var variable;  // 변수 선언문
 
 위의 코드 처럼 변수 선언문이 코드의 맨 위로 끌어 올려진 것처럼 동작하는 자바스크립트 고유의 특징을 `호이스팅` 이라고 한다.
 
-<b>var, let, const, function, class 키워드를 사용해 선언하는 모든 식별자는 호이스팅된다.<b>
+<b>var, let, const, function, class 키워드를 사용해 선언하는 모든 식별자는 호이스팅된다.</b>
 <br />
 <br />
 
