--- a/Javascript/1. 변수.md
+++ b/Javascript/1. 변수.md
@@ -122,3 +122,16 @@ const v3 = [1,2,3,4,5];
 var는 런타임 이전에 자바스크립트 엔진에 의해 암묵적으로 선언 단계와 초기화 단계가 한번에 진행이 되는데, let, const는 분리되어 진행된다.
 
 이 부분에서는 이 정도..? 다른 내용에도 질문 포인트 생각해서 찾아봐야겠다!!
+
+let, const는 선언 단계 진행 후 실제 변수에 값을 할당하는 부분에 와서야 값을 초기화 한다.
+
+```
+어 근데 지금 좀 헷갈림
+변수 선언이 선언 단계, 초기화 단계 이렇게 진행되고
+변수 선언은 런타임 이전에 진행하고 값의 할당은 런타임에 진행된다고 하는데
+초기화 단계는 그러면 변수 선언이니까 런타임 이전 아님..?
+그냥 초기화 단계랑 값의 할당이 똑같은건가..?
+var는 그냥 그게 런타임 이전에 동시에 되는거고
+let, const는 선언 단계만 런타임 이전, 초기화 단계는 런타임에 코드 실행시킬 때 진행된다
+이렇게 생각하면 되는건가..?
+```
