[ Javascript ] 매개변수와 인수

--- a/Javascript/7. 함수.md
+++ b/Javascript/7. 함수.md
@@ -140,3 +140,21 @@ const add = (x, y) => x + y;
 - prototype 프로퍼티가 없다
 - arguments 객체를 생성하지 않는다.
 
+<br />
+
+## 함수 호출
+
+### 매개변수와 인수
+
+모든 인수는 암묵적으로 arguments 객체의 프로퍼티로 보관된다.
+
+```jsx
+function add(x, y) {
+    console.log(arguments);
+    // Arguments(3) [2, 5, 10, callee:f, Symbol(Symbol.iterator): f]
+    return x + y;
+}
+
+add(2, 5, 10);
+```
+
