--- a/Javascript/1. 변수.md
+++ b/Javascript/1. 변수.md
@@ -101,7 +101,7 @@ const v3 = [1,2,3,4,5];
 ```
 💡 가비지 콜렉터
 애플리케이션이 할당한 메모리 공간을 주기적으로 검사하여 더이상 사용되지 않는 메모리를 해제하는 기능을 말한다.
-가비지 콜렉터를 통해 메모리 누스를 방지한다.
+가비지 콜렉터를 통해 메모리 누수를 방지한다.
 ```
 
 <br />
