Update 2. 기본 용어.md

--- a/Javascript/2. 기본 용어.md
+++ b/Javascript/2. 기본 용어.md
@@ -59,7 +59,7 @@ var sum = 1 + 2;
 
 변수 선언문 같은 경우는 값으로 평가될 수 없다.
 ```jsx
-var x = 1;  // 변수 선언물
+var x = 1;  // 변수 선언문
 var y = var x = 1;  // 에러
 ```
 값이 위치할 수 있는 자리에 변수 선언문을 넣을 수 없는 것을 보고 알 수 있다.
