--- a/Javascript/7. 함수.md
+++ b/Javascript/7. 함수.md
@@ -157,4 +157,104 @@ function add(x, y) {
 
 add(2, 5, 10);
 ```
+arguments 객체는 매개변수 개수를 확정할 수 없는 가변 인자 함수를 구현할 때 유용하게 사용된다.
 
+<br />
+
+#### 매개변수 기본값
+ES6부터는 매개변수에 기본값을 설정할 수 있다.<br />
+매개변수에 인수를 전달하지 않았을 경우와 undefined를 전달한 경우에만 유효하다.
+
+```jsx
+function x (a = 0, b = 0, c = 0) {  // 매개변수에 기본값을 0으로 설정
+    return a + b + c;
+}
+```
+
+<br />
+
+#### 매개변수의 최대 개수
+이상적인 함수는 한 가지 일만 하는 것이기 때문에 가급적 작게 만들어야 한다.<br />
+따라서 매개변수도 최대 3개 이상을 넘지 않는 것이 권장된다.
+
+만약 그 이상의 매개변수가 필요하다면 하나의 매개변수를 선언하고 객체를 인수로 전달하는 것이 유리한데, <br />
+이러한 방법은 해당 객체의 내용을 바꿀 경우 함수 외부의 객체가 변경되는 부수 효과가 발생하기도 한다.
+
+객체를 매개변수로 전달하고 함수 내부에서 객체를 변경하면 원본 객체가 훼손된다.<br />
+이렇게 함수가 외부 상태를 변경하면 상태 변화를 추적하기가 어려워진다.<br />
+이런 문제의 해결 방법 중 하나는 객체를 `불변 객체`로 만들어서 사용하는 것이다.
+
+## 다양한 함수의 형태
+
+### 즉시 실행 함수
+함수 정의와 동시에 즉시 호출되는 함수를 즉시 실행 함수라고 한다.
+단 한번만 호출되며 다시 호출할 수 없다.
+
+```jsx
+(function () {
+    const a = 3;
+    const b = 5;
+    return a * b;
+}();)
+
+// 사실 나는 이 밑의 형태의 즉시실행함수가 익숙하다.. 물론 괄호 위치만 다름..ㅎ
+(function () {
+    const a = 3;
+    const b = 5;
+    return a * b;
+})();
+```
+
+즉시 실행 함수는 익명함수를 사용하는 것이 일반적이다.
+
+<br />
+
+### 콜백 함수
+함수의 매개변수를 통해 다른 함수의 내부로 전달되는 함수를 `콜백 함수`라고 하고, <br />
+변수를 통해 함수의 외부에서 콜백 함수를 전달받은 함수를 `고차 함수`라고 한다.<br />
+
+매개변수를 통해 함수를 전달받거나 반환값으로 함수를 반환하는 함수를 함수형 프로그래밍 패러다임에서 고차함수라 한다.
+
+<br />
+
+고차 함수는 콜백 함수를 자신의 일부분으로 합성한다.<br />
+고차 함수는 매개변수를 통해 전달받은 콜백 함수의 호출 시점을 결정해서 호출한다.<br />
+콜백 함수는 고차 함수에 의해 호출되며(모든 콜백 함수가 그렇지는 않지만..)<br />
+이때 고차 함수는 필요에 따라 콜백 함수에 인수를 전달할 수 있다.
+따라서 고차 함수에 콜백 함수를 전달할 떄 콜백 함수를 호출하지 않고 함수 자체를 전달해야한다.
+
+<br />
+
+### 순수 함수와 비순수 함수
+> 순수 함수 : 외부 상태에 의존하지도 않고 변경하지도 않는 함수 (부수효과가 없는 함수) <br />
+> 비순수 함수 : 외부 상태에 의존하거나 외부 상태를 변경하는 함수 (부수효과가 있는 함수)
+
+순수 함수는 동일한 인수가 전달되면 언제나 동일한 값을 반환하는 함수이다.
+반면 비순수 함수는 외부의 상태에 따라 반환값이 달라지기도 하고 외부 상태를 변경하는 부수효과가 있는 함수이다.
+
+```jsx
+var count = 0;
+
+// 순수 함수 - 전달받은 값을 증가시켜서 리턴만 할 뿐 count를 직접 바꾸지 않음
+function increase(n) { return ++n;}
+
+// 비순수 함수 - count값이 변경됨
+function increase2() { return ++count;}
+
+count = increase(count);
+increase2();
+```
+
+함수가 외부 상태를 변경하면 상태 변화를 추적하기가 어려워진다.<br />
+따라서 함수 외부 상태의 변경을 지양하는 순수 함수를 사용하는 것이 좋다.
+
+<br />
+
+#### 함수형 프로그래밍
+함수형 프로그래밍은 순수 함수와 보조 함수의 조합을 통해 외부 상태를 변경하는 부수 효과를 최소화해서 `불변성`을 지향하는 프로그래밍 패러다임이다.
+
+로직 내에 존재하는 조건문과 반복문을 제거해서 복잡성을 해결하며,<br />
+변수 사용을 억제하거나 생명주기를 최소화해서 상태 변경을 피해 오류를 최소화하는 것을 목표로 한다.
+
+함수형 프로그래밍은 결국 `순수 함수`를 통해 `부수 효과를 최대한 억제`해 오류를 피하고<br />
+프로그램의 안정성을 높이려는 노력의 일환이라고 할 수 있다.
