--- a/Javascript/8. 스코프.md
+++ b/Javascript/8. 스코프.md
@@ -82,8 +82,93 @@ outer의 상위 스코프는 전역 스코프이다.
 변수를 참조할 때 자바스크립트 엔진은 스코프 체인을 통해 변수를 참조하는 코드의 스코프에서 시작하여<br />
 상위 스코프 방향으로 이동하며 선언된 변수를 검색한다.
 
-스코프 체인은 물리적인 실체로도 존재하는데,<br />;
+스코프 체인은 물리적인 실체로도 존재하는데,<br />
 자바스크립트 엔진은 코드를 실행하기에 앞서 렉시컬 환경을 실제로 생성한다.<br />
 변수 선언이 실행되면 변수 식별자가 렉시컬 환경에 키로 등록되고 변수 할당이 일어나면 값을 변경한다.<br />
 변수의 검색도 이 자료구조 상에서 이뤄진다.
+
+<br />
+
+## 함수 레벨 스코프
+지역 스코프를 가진다고 했을 때의 `지역`은 함수 몸체 내부를 말하는데,<br />
+이 말은 코드 블록이 아닌 함수에 의해서만 지역 스코프가 생성된다는 것과 같다.
+
+대부분의 프로그래밍 언어는 함수 내부 뿐만 아니라 코드 블록이 지역 스코프를 생성하는데 이를 `블록 스코프`라고 한다.<br />
+하지만 var 키워드로 선언된 변수는 함수의 코드 블록만을 지역 스코프로 인정한다.<br />
+이러한 특성을 `함수 레벨 스코프`라고 한다.
+
+```jsx
+var x = 10;
+
+if (true) {
+    // var는 함수 내부만 지역이기 때문에 여기서의 x는 전역 변수 x를 중복 선언한 것과 같다.
+    var x = 1;  
+}
+
+console.log(x)  // 1
+
+// ======================
+
+var i = 10;
+
+// for문에서 선언한 i도 전역변수여서 위에 선언된 i가 중복 선언된다.
+for (var i = 0; i < 5; i++) {
+    console.log(i);
+}
+
+console.log(i);  // 5
+```
+<br />
+
+var 키워드는 함수의 코드 블록만을 지역 스코프로 인정하지만<br />
+ES6에서 추가된 let, const는 블록 레벨 스코프를 지원한다.
+
+<br />
+
+## 렉시컬 스코프
+
+```jsx
+
+var x = 1;
+
+function foo() {
+    var x = 10;
+    bar();
+}
+
+function bar () {
+    console.log(x);
+}
+
+foo();  // 1
+bar();  // 1
+```
+
+함수의 상위 스코프를 결정하는 방식은 두가지가 있다.
+1. <b>함수를 어디서 호출</b>했는지에 따라 함수의 상위 스코프를 결정
+2. <b>함수를 어디서 정의</b>했는지에 따라 함수의 상위 스코프를 결정
+
+<br />
+
+첫 번째 방식으로 위의 예제를 생각해본다면 bar 함수의 상위 스코프는 foo 함수가 될 것이고,<br />
+두 번째 방식으로 생각해보면 bar 함수의 상위 스코프는 전역 스코프이다.
+
+<br />
+
+첫 번째 방식을 `동적 스코프`라 한다.<br />
+함수가 호출되는 시점에 동적으로 상위 스코프를 결정하기 때문에 `동적 스코프`라 한다.
+
+두 번째 방식은 `렉시컬 스코프` 또는 `정적 스코프`라 한다.<br />
+상위 스코프가 동적으로 변하지 않고 함수 정의가 평가되는 시점에 상위 스코프가 정적으로 결정되어서 정적 스코프라고 말한다.<br />
+자바스크립트를 비롯한 대부분의 프로그래밍 언어가 `렉시컬 스코프`를 따른다.
+
+<br />
+
+자바스크립트는 렉시컬 스코프를 따르기 때문에 함수를 어디서 정의했는지에 따라 상위 스코프를 정하고,<br />
+함수가 호출된 위치는 상위 스코프 결정에 영향을 끼치지 않는다.<br />
+즉, 함수의 상위 스코프는 언제나 자신이 정의된 스코프이다.
+
+함수 정의가 실행되어 생성된 함수 객체는 결정된 상위 스코프를 기억해둔다.<br />
+함수가 호출될 때마다 함수의 상위 스코프를 참조해야하기 때문이다.
+
 
