--- a/Javascript/9. 전역 변수의 문제점.md
+++ b/Javascript/9. 전역 변수의 문제점.md
@@ -33,3 +33,141 @@ console.log(x);  // 2
 지역 변수는 지역 스코프의 선두로 끌어올려진 것처럼 동작하기 때문에 함수 전체에서 유효하다.<br />
 다시 말해 호이스팅은 변수 선언이 스코프의 선두로 끌어올려진 것처럼 동작하는 것을 말한다.
 
+<br />
+
+### 전역 변수의 생명 주기
+전역 코드는 전역 코드를 실행하는 특별한 진입점이 없고 코드가 로드되자마자 곧바로 해석, 실행되고,<br />
+마지막 문이 실행되어 더 이상 실행할 문이 없을 때 종료한다.
+
+var 키워드로 선언한 전역 변수는 전역 객체의 프로퍼티가 되는데,<br />
+브라우저 환경에서 전역 객체는 window이므로 var 키워드로 선언한 전역 변수는 window의 프로퍼티가 된다.<br />
+window는 웹페이지를 닫기 전까지 유효하다.
+이를 통해 var 키워드로 선언한 전역 변수의 생명 주기가 전역 객체의 생명 주기와 일치한다는 것을 알 수 있다.
+
+<br />
+
+## 전역 변수의 문제점
+### 암묵적 결합
+
+전역 변수는 모든 코드가 전역 변수를 참조하고 변경할 수 있는 `암묵적 결합`을 허용한다.<br />
+변수의 유효 범위가 크면 클수록 코드의 가독성이 나빠질 뿐만 아니라 의도치 않게 상태가 변경될 위험성도 높아진다.
+
+<br />
+
+### 긴 생명 주기
+전역 변수의 생명주기는 전역 객체와 같아서 생명 주기가 길다.<br />
+따라서 메모리 리소스도 오랜 기간 소비한다.
+
+var 키워드는 변수의 중복 선언도 허용하기 때문에 긴 코드 내에서는 위도치 않게 중복되는 이름으로 변수를 생성해서 의도치 않은 재할당이 이뤄질 가능성도 높아진다.
+
+지역 변수는 생명 주기가 짧아서 전역 변수보다 상태 변경에 의한 오류가 발생할 확률이 적고 리소스도 짧은 기간만 소비한다.
+
+<br />
+
+### 스코프 체인 상에서 종점에 존재
+변수를 검색할 때 전역 변수가 가장 마지막에 검색되는 것을 의미한다.<br />
+따라서 전역 변수의 검색 속도가 가장 느리다. 
+
+<br />
+
+### 네임스페이스 오염
+자바스크립트의 가장 큰 문제점 중 하나는 파일이 분리되어 있다 해도 하나의 전역 스코프를 공유하는 것이다.<br />
+따라서 다른 파일 내에서 동일한 이름으로 만들어진 전역 변수나 전역 함수가 같은 스코프 내에 존재할 경우 예상치 못한 결과를 가져올 수 있다.
+
+<br />
+<br />
+
+## 전역 변수의 사용을 억제하는 방법
+전역 변수를 반드시 사용해야하는 경우가 아니면 지역 변수를 사용하는 것이 좋다.<br />
+변수의 스코프는 좁을수록 좋다!
+
+### 즉시 실행 함수
+모든 코드를 즉시 실행 함수로 감싸면 모든 변수는 즉시 실행 함수의 지역 변수가 된다.<br />
+이 방법을 사용하면 전역 변수를 생성하지 않으므로 라이브러리 등에 자주 사용된다고 한다.
+
+```jsx
+(function(){
+    var x = 10;  // 즉시 실행 함수의 지역 변수
+}());
+
+console.log(x);  // ReferenceError: x is not defined
+```
+<br />
+
+### 네임스페이스 객체
+전역에 네임스페이스 역할을 담당할 객체를 생성하고 전역 변수처럼 사용하고 싶은 변수를 프로퍼티로 추가하는 방법이다.
+
+```jsx
+var MYNAMESPACE = {};  // 전역 네임스페이스 객체
+
+MYNAMESPACE.name = 'yujuck';
+
+console.log(MYNAMESPACE.name);
+```
+
+네임스페이스 객체에 또 다른 네임스페이스 객체를 프로퍼티로 추가해서 네임스페이스를 계층적으로 구성할 수도 있다.
+
+```jsx
+var MYNAMESPACE = {};  // 전역 네임스페이스 객체
+
+MYNAMESPACE.person = {
+    name: 'yujuck',
+    address: 'seoul'
+}
+
+console.log(MYNAMESPACE.person.name);
+```
+
+근데 이 방법은 네임스페이스 변수 자체가 전역 변수에 할당되기 때문에 유용해 보이지는 않는다.
+
+<br />
+
+### 모듈 패턴
+`클래스`를 모방해서 관련이 있는 변수와 함수를 모아 `즉시 실행 함수`로 감싸 하나의 모듈을 만든다.<br />
+모듈 패턴은 `클로저`를 기반으로 동작한다.<br />
+특징은 `전역 변수의 억제`는 물론 `캡슐화`까지 구현할 수 있다는 것이다.
+
+`캡슐화`는 프로퍼티와 메서드를 하나로 묶는 것을 말한다.<br />
+캡슐화는 객체의 특정 프로퍼티나 메서드를 감출 목적으로 사용하기도 하는데, 이를 `정보 은닉`이라고 한다.
+
+대부분의 객체지향 프로그래밍 언어는 public, private, protected등의 `접근 제한자`를 사용해 공개 범위를 한정할 수 있는데,<br />
+<b>자바스크립트는 접근 제한자를 제공하지 않는다.</b><br />
+모듈 패턴은 전역 네임스페이스의 오염을 막는 기능은 물론, 한정적이기는 하지만 정보 은닉을 구현하기 위해 사용하기도 한다.
+
+```jsx
+var Counter = (function() {
+    // private 변수
+    var num = 0;
+
+    // 외부로 공개할 데이터나 메서드를 프로퍼티로 추가한 객체를 반환
+    return {
+        increase() {
+            return ++num;
+        },
+        decrease() {
+            return --num;
+        }
+    };
+}());
+
+console.log(Counter.num);  // undefined
+
+console.log(Counter.increase());  // 1
+console.log(Counter.decrease());  // 0
+```
+
+<br />
+
+### ES6 모듈
+ES6 모듈을 사용하면 전역 변수를 사용할 수 없다.<br />
+<b>ES6 모듈은 파일 자체의 독자적인 모듈 스코프를 제공한다.</b>
+따라서 모듈 내에서 var 키워드로 선언한 변수는 전역 변수가 아니며 window 객체의 프로퍼티도 아니다.
+
+모던 브라우저에서는 ES6 모듈을 사용할 수 있다.<br />
+script 태그에 `type="module"` 어트리뷰트를 추가하면 로드된 자바스크립트 파일은 `모듈로서 동작`한다.<br />
+모듈의 파일 확장자는 `mjs`를 권장한다고 한다.
+
+```html
+<script type="module" src="lib.mjs"></script>
+<script type="module" src="app.mjs"></script>
+```
