--- a/Javascript/Deep_Dive/10. let, const, 블록 레벨 스코프.md
+++ b/Javascript/Deep_Dive/10. let, const, 블록 레벨 스코프.md
@@ -66,6 +66,8 @@ var x;
 
 ## let 키워드
 
+<br />
+
 ### 변수 중복 선언 금지
 let 키워드로 이름이 같은 변수를 중복 선언하면 문법 에러(SyntaxError)가 발생한다.
 
@@ -73,6 +75,8 @@ let 키워드로 이름이 같은 변수를 중복 선언하면 문법 에러(Sy
 let x = 10;
 let x = 100;  // SyntaxError;
 ```
+
+<br />
 
 ### 블록 레벨 스코프
 let 키워드로 선언한 변수는 모든 코드 블록(함수, if문, for문, try/catch문..)을 지역 스코프로 인정하는 `블록 레벨 스코프`를 따른다.
@@ -109,3 +113,39 @@ x();
 
 console.log(i);  // 10
 ```
+<br />
+
+### 변수 호이스팅
+
+var 키워드와 달리 변수 호이스팅이 발생하지 않는 것처럼 동작한다.
+
+```jsx
+console.log(x);  // ReferenceError
+let x;
+```
+
+var 키워드로 선언했다면 위의 상황에서 ReferenceError가 아닌 undefined가 출력되었을 것이다.<br />
+var 키워드 변수는 런타임 이전에 `선언 단계`와 `초기화 단계`가 `한번에 진행`되는데,<br />
+let 키워드 변수는 <b>`선언 단계`와 `초기화 단계`가 `분리되어 진행`</b>된다.<br />
+즉, 런타임 이전에 선언 단계가 먼저 실행되지만 `초기화 단계`는 `변수 선언문에 도달했을 때 실행`된다.
+
+초기화 단계가 실행되기 이전에 변수에 접근하려고 하면 참조 에러(ReferenceError)가 발생한다.<br />
+let 키워드 변수는 스코프 시작 지점부터 초기화 단계가 실행되는 변수 선언문까지는 변수를 참조할 수 없는데,<br />
+이 구간을 <b>`일시적 사각지대`(Temporal Dead Zone: TDZ)</b> 라고 한다.
+
+<br />
+
+위의 특성 때문에 변수 호이스팅이 발생하지 않는 것처럼 보이지만 그렇지는 않다.
+```jsx
+let x = 1;  // 전역변수0
+{
+    console.log(x);  // ReferenceError
+    let x = 2;  // 지역변수
+}
+```
+변수 호이스팅이 발생하지 않는다면 위 예제는 전역 변수 x의 값을 출력해야하는데,<br />
+그렇지 않고 ReferenceError가 발생한다.<br />
+-> 호이스팅이 발생했기 때문에 지역 변수 x의 존재를 알고 있지만 값이 초기화 되어있지 않기 때문에 ReferenceError가 발생
+
+자바스크립트는 ES6에서 도입된 let, const를 포함해서 모든 선언(var, let ,const, function, class 등)을 호이스팅 한다.<br />
+단, ES6에서 도입된 let, const class를 사용한 선언문은 호이스팅이 발생하지 않는 것처럼 동작한다.
