[ Javascript ] const 키워드

--- a/Javascript/Deep_Dive/10. let, const, 블록 레벨 스코프.md
+++ b/Javascript/Deep_Dive/10. let, const, 블록 레벨 스코프.md
@@ -137,7 +137,7 @@ let 키워드 변수는 스코프 시작 지점부터 초기화 단계가 실행
 
 위의 특성 때문에 변수 호이스팅이 발생하지 않는 것처럼 보이지만 그렇지는 않다.
 ```jsx
-let x = 1;  // 전역변수0
+let x = 1;  // 전역변수
 {
     console.log(x);  // ReferenceError
     let x = 2;  // 지역변수
@@ -145,7 +145,72 @@ let x = 1;  // 전역변수0
 ```
 변수 호이스팅이 발생하지 않는다면 위 예제는 전역 변수 x의 값을 출력해야하는데,<br />
 그렇지 않고 ReferenceError가 발생한다.<br />
--> 호이스팅이 발생했기 때문에 지역 변수 x의 존재를 알고 있지만 값이 초기화 되어있지 않기 때문에 ReferenceError가 발생
+-> 호이스팅이 발생했기 때문에 지역 변수 x의 존재를 알고 있지만 값이 초기화 되어있지 않아서 ReferenceError가 발생
 
 자바스크립트는 ES6에서 도입된 let, const를 포함해서 모든 선언(var, let ,const, function, class 등)을 호이스팅 한다.<br />
 단, ES6에서 도입된 let, const class를 사용한 선언문은 호이스팅이 발생하지 않는 것처럼 동작한다.
+
+<br />
+
+### 전역 객체와 let
+var 키워드로 선언한 전역 변수, 전역 함수, 선언하지 않은 변수에 값을 할당한 암묵적 전역은 전역 객체 window의 프로퍼티가 된다.<br />
+반면 let으로 선언한 전역 변수는 전역 객체의 프로퍼티가 아니고 선언된 환경의 블록 내에 존재하게 된다.
+
+```jsx
+var x = 1;
+console.log(window.x);  // 1
+
+y = 2;
+console.log(y);  // 2
+
+function z() {}
+console.log(window.z);  // z() {}
+
+let a = 3;
+console.log(window.a);  // undefined
+console.log(a);  // 3 
+```
+
+<br />
+
+
+## const 키워드
+let과 거의 비슷하지만 const만의 특징도 있다.
+
+<br />
+
+### 선언과 초기화
+const로 선언된 키워드는 반드시 선언과 동시에 초기화해야 한다. 그렇지 않으면 SyntaxError가 발생한다.
+```jsx
+const x;  // SyntaxError
+```
+
+let과 마찬가지로 블록 레벨 스코프를 가지고, 변수 호이스팅이 발생하지 않는 것처럼 동작한다.
+
+<br />
+
+### 재할당 금지
+var, let과 다르게 재할당이 금지된다.
+
+```jsx
+const x =  7;
+x = 8;  // TypeError
+```
+
+<br />
+
+### 상수
+변수에 원시값을 할당한 경우 재할당으로만 값을 변경할 수 있는데, 재할당이 금지되는 특징으로 인해 const는 상수를 정의할 때 사용되기도 한다.<br />
+
+> 상수 : 재할당이 금지된 변수
+
+const로 선언된 변수에 원시 값을 할당한 경우 원시 값은 변경할 수 없는 값(immutable value)이고, const 키워드에 의해 재할당이 금지되므로 <br />
+할당된 변수를 변경할 방법은 없다.
+
+<br />
+
+### const 키워드와 객체
+const 키워드로 선언된 변수에 객체를 할당한 경우 값을 변경할 수 있다.<br />
+원시 값은 재할당 없이는 변경이 불가능하지만 객체는 재할당 없이도 변경 가능한 값이기 때문이다.
+
+const 키워드는 재할당을 금지할 뿐 `불변`을 의미하는 것이 아니기 때문이다.
