--- a/Javascript/Deep_Dive/11. 프로퍼티 어트리뷰트.md
+++ b/Javascript/Deep_Dive/11. 프로퍼티 어트리뷰트.md
@@ -103,7 +103,7 @@ const person = {
 1. 프로퍼티 키가 유효한지 확인
 2. 프로토타입 체인에서 프로퍼티 검색
 3. fullName 프로퍼티가 데이터 프로퍼티인지 접근자 프로퍼티인지 확인
-4. 접근자 프로퍼티이므로 fullName의 접근자 프로퍼티 어트리뷰트 [[Get]]의 값인 getter 함수를 호출하여 결과를 반환함.
+4. 접근자 프로퍼티이므로 fullName의 접근자 프로퍼티 어트리뷰트 [[Get]]의 값인 getter 함수를 호출하여 결과를 반환
     - 프로퍼티 어트리뷰트 [[Get]]의 값은 Object.getOwnPropertyDescriptor 메서드가 반환하는 프로퍼티 디스크립터 객체의 get 프로퍼티 값과 같음
 
 <br />
@@ -117,10 +117,12 @@ const person = {
 
 ```jsx
 Object.defineProperty(person, 'fullName', {
-    get fullName() {
+    // getter 함수
+    get() {
         return `${this.firstName} ${this.lastName}`;
     },
-    set fullName(name) {
+    // setter 함수
+    set(name) {
         [this.firstName, this.lastName] = name.split(' ');
     },
     enumerable: true,
@@ -134,10 +136,93 @@ Object.defineProperty(person, 'firstName', {
     configurable: true
 })
 ```
-definProperty에 디스크립터 객체를 누락시키면 undefined, false가 디폴트값이다.
+defineProperty에 디스크립터 객체를 누락시키면 undefined, false가 디폴트값이다.
 
 `Object.defineProperties`를 사용하면 여러 개의 프로퍼티를 한번에 정의할 수 있다.
 
 ```jsx
-Object.defineProperties(person, {정의할 프로퍼티 내용})
+Object.defineProperties(person, {
+    firstName: {
+        value: "yujuck",
+        writable: true,
+        enumerable: true,
+        configurable: true
+    },
+    lastName: {
+        value: "yujuck",
+        writable: true,
+        enumerable: true,
+        configurable: true
+    }
+    fullName: {
+        // getter 함수
+        get() {
+            return `${this.firstName} ${this.lastName}`;
+        },
+        // setter 함수
+        set(name) {
+            [this.firstName, this.lastName] = name.split(' ');
+        },
+        enumerable: true,
+        configurable: true
+    }
+});
+
+person.fullName = "kim yujin";
+console.log(person);  // { firstName: "yujin", lastName: "kim" }
+```
+
+<br />
+
+## 객체 변경 방지
+
+객체는 변경 가능한 값이므로 재할당 없이 직접 변경할 수 있다.<br />
+프로퍼티의 추가/삭제가 가능하고, 값을 갱신할 수 있으며, 프로퍼티 어트리뷰트를 재정의할 수도 있다.
+
+자바스크립트는 객체의 변경을 방지하는 메서드를 제공하는데, 변경을 금지하는 정도가 다르다
+
+구분 | 메서드 | 프로퍼티 추가 | 프로퍼티 삭제 | 프로퍼티 값 읽기 | 프로퍼티 값 쓰기(갱신) | 프로퍼티 어트리뷰트 재정의 
+:-: | :--: | :--------: | :--------: | :----------: | :----------: | :-----------------:
+객체 확장 금지 | Object.preventExtensions | X | O | O | O | O
+겍체 밀봉     | Object.seal              | X | X | O | O | X
+객체 동결     | Object.freeze            | X | X | O | X | X
+
+<br />
+
+### 객체 확장 금지
+
+Object.preventExtensions 메서드를 사용하면 프로퍼티의 추가가 금지된다.<br />
+프로퍼티의 동적 추가, Object.defineProperty로 추가하는 방법 모두 금지된다.
+
+확장이 가능한 객체인지는 Object.isExtensible 메서드로 확인 가능하다.
+
+<br />
+
+### 객체 밀봉
+
+Object.seal 메서드는 객체의 값을 읽고 쓰기만 가능하게 만든다.
+밀봉된 객체인지는 Object.isSealed 메서드로 확인할 수 있다.
+
+<br />
+
+### 객체 동결
+
+Object.freeze 메서드는 객체를 읽기만 가능하게 만든다.<br />
+동결된 객체인지는 Object.isFrozen 메서드로 확인할 수 있다.
+
+<br />
+
+### 불변 객체
+
+위의 메서드들을 사용해도 얕은 변경 방지만 될 뿐 중첩 객체까지는 영향을 주지 않는다.<br />
+객체의 중첩 객체까지 불변 객체로 만드려면 객체 값에 대해 재귀적으로 Object.freeze를 호출해야 한다.
+
+```javascript
+function deepFreeze(target) {
+    if (target && typeof target === 'object' && !Object.isFrozen(target)) {
+        Object.freeze(target);
+        Object.keys(target).forEach(key => deepFreeze(target[key]));
+    }
+    return target;
+}
 ```
