--- a/Javascript/Deep_Dive/14. 프로토타입.md
+++ b/Javascript/Deep_Dive/14. 프로토타입.md
@@ -101,3 +101,107 @@ console.log(circle1.getArea === circle2.getArea);  // true
 > 던더프로토 라고 읽는다! (dunder : 더블 언더스코어 (double underscore)의 줄임말)
 
 **모든 객체는 `__proto__` 접근자 프로퍼티를 통해 자신의 프로토타입, 즉 [[Prototype]] 내부 슬롯에 간접적으로 접근할 수 있다.**
+
+접근자 프로퍼티는 자체적으로 값을 갖지 않고 다른 데이터 프로퍼티의 값을 읽거나 저장할 때 사용하는 접근자 함수인 [[Get]], [[Set]] 프로퍼티 어트리뷰트로 구성된 프로퍼티다.<br />
+Object.prototype의 접근자 프로퍼티인 `__proto__`는 getter/setter 함수라고 부르는 접근자 함수를 통해 프로토타입을 취득하거나 할당한다.<br />
+
+`__proto__` 접근자 프로퍼티는 객체가 직접 소유하는 프로퍼티가 아니라 Object.prototype의 프로퍼티다.
+따라서 모든 객체는 상속을 통해 `Object.prototype.__proto__` 접근자 프로퍼티룰 사용할 수 있다.
+
+```jsx
+const person = { name : 'yujuck' };
+
+console.log(person.hasOwnProperty('__proto__'));  // false
+
+// __proto__ 프로퍼타는 모든 객체의 프로토타입 객체인 Object.prototype의 접근자 프로퍼티다.
+console.log(Object.getOwnPropertyDescriptor(Object.prototype, '__proto__'));
+
+// 모든 객체는 Object.prototype의 접근자 프로퍼티 __proto__를 상속받아 사용할 수 있다.
+console.log({}.__proto__ === Object.prototype);  // true
+```
+
+<br />
+
+💡 **Object.prototype**<br /> 
+모든 객체는 프로토타입의 계층 구조인 프로토타입 체인에 묶여 있다.<br />
+프로토타입 체인의 최상위 객체는 Object.prototype이며,<br />
+이 객체의 프로퍼티와 메서드는 모든 객체에 상속된다.
+
+<br />
+
+프로토타입에 접근하기 위해 접근자 프로퍼티를 사용하는 이유는 상호 참조에 의해 프로토타입 체인이 생성되는 것을 방지하기 위해서다.<br />
+
+```jsx
+const parent = {};
+const child = {};
+
+child.__proto__ = parent;
+parent.__proto__ = child;  // TypeError: Cyclic __proto__ value
+```
+위 코드처럼 작성했을 때 에러 없이 처리가 된다면 서로가 서로의 프로토타입이 되는 상황이 생기기 때문에<br />
+`__proto__` 접근자 프로퍼티는 에러를 발생시킨다.<br />
+프로토타입 체인은 단방향 링크드 리스트로 구현되어야 한다. 즉, 프로퍼티 검색 방향이 한쪽 방향으로만 흘러가야 한다.<br />
+
+<br />
+
+`__proto__` 는 ES6에서부터 표준으로 채택되었다.<br />
+하지만ㄴ 코드 내에서 직접 사용하는 것이 권장되지는 않는데, 이유는 모든 객체가 `__proto__` 접근자 프로퍼티를 사용할 수 있는 것이 아니기 때문이다.<br />
+직접 상속을 통해 Object.prototype을 상속받지 않는 경우가 위의 상횡에 속한다.<br />
+따라서 `__proto__` 대신 프로토타입의 참조를 취득하고 싶은 경우에는 `Object.getPrototypeOf` 메서드를 사용하고,<br />
+프로토타입을 교체하고 싶을 때는 `Object.setPrototypeOf` 메서드를 사용할 것을 권장한다.
+
+<br />
+
+### 함수 객체의 prototype 프로퍼티
+**함수 객체만이 소유하는 prototype 프로퍼티는 생성자 함수가 생성할 인스턴스의 프로토타입을 가리킨다.**
+
+```jsx
+// 함수 객체는 prototype 프로퍼티를 소유함
+(function () {}).hasOwnProperty('prototype');  // true
+
+// 일반 객체는 prototype 프로퍼티를 소유하지 않음
+({}).hasOwnProperty('prototype');  // false
+```
+
+따라서 non-constructor인 회살표 함수와 메서드 축약 표현으로 정의된 메서드는 prototype 프로퍼티를 소유하지 않고 프로토타입도 생성하지 않는다.<br />
+
+모든 객체가 가지고 있는 (엄밀히 말하면 Object.prototype으로 상속받은) `__proto__` 접근자 프로퍼티와<br />
+함수 객체만이 가지고 있는 prototype 프로퍼티는 결국 동일한 프로토타입을 가리킨다.<br />
+하지만 프로퍼티를 사용하는 주체가 다르다.
+
+구분 | 소유 |  값  | 사용 주체 | 사용 목적 |
+:-- | :-- | :-- | :------ | :------ |
+`__proto__ ` 접근자 프로퍼티 | 모든 객체 | 프로토타입의 참조 | 모든 객체 | 객체가 자신의 프로토타입에 접근 또는 교체하기 위해 사용
+prototype | constructor | 프로토타입의 참조 | 생성자 함수 | 생성자 함수가 자신이 생성할 객체의 프로토타입을 할당하기 위해 사용
+
+<br />
+
+```jsx
+function Person(name) {
+    this.name = name;
+}
+
+const me = new Person('yujuck');
+
+console.log(Person.prototype === me.__proto__);  // true
+```
+
+<br />
+
+### 프로토타입의 constructor 프로퍼티와 생성자 함수
+모든 프로토타입은 constructor 프로토타입을 갖고, prototype 프로퍼티로 자신을 참조하고 있는 `생성자 함수를 가리킨다`.<br />
+이 연결은 생성자 함수가 생성될 때, 즉 함수 객체가 생성될 때 이뤄진다.
+
+```jsx
+function Person(name) {
+    this.name = name;
+}
+
+const me = new Person('yujuck');
+
+console.log(me.constructor === Person);  // true
+```
+
+Person 생성자 함수는 me 객체를 생성했다. 이때 me 객체는 프로토타입의 constructor 프로퍼티를 통해 생성자 함수와 연결된다.<br />
+me 객체에는 constructor 프로퍼티가 없지만 me 객체의 프로토타입인 Person.prototype에는 constructor 프로퍼티가 있다.<br />
+따라서 me 객체는 프로토타입인 Person.prototype의 constructor 프로퍼티를 상속받아 사용할 수 있다.
