--- a/Javascript/Deep_Dive/14. 프로토타입.md
+++ b/Javascript/Deep_Dive/14. 프로토타입.md
@@ -205,3 +205,83 @@ console.log(me.constructor === Person);  // true
 Person 생성자 함수는 me 객체를 생성했다. 이때 me 객체는 프로토타입의 constructor 프로퍼티를 통해 생성자 함수와 연결된다.<br />
 me 객체에는 constructor 프로퍼티가 없지만 me 객체의 프로토타입인 Person.prototype에는 constructor 프로퍼티가 있다.<br />
 따라서 me 객체는 프로토타입인 Person.prototype의 constructor 프로퍼티를 상속받아 사용할 수 있다.
+
+<br />
+
+## 리터럴 표기법에 의해 생성된 객체의 생성자 함수와 프로토타입
+리터럴 표기법에 의한 객체 생성 방식과 같이 new 연산자와 함께 생성자 함수를 호출하여 인스턴스를 생성하지 않는 객체 생성 방식도 있다.
+```js
+const obj = {};
+const add = function (a, b) { return a + b; }
+const arr = [1, 2, 3];
+.
+.
+```
+<br />
+
+리터럴 표기법에 의해 생성된 객체도 물론 프로토타입이 존재하지만,<br />
+프로토타입의 constructor 프로퍼티가 가리키는 생성자 함수가 반드시 객체를 생성한 생성자 함수라고 단정지을 수 없다.
+
+```js
+const obj = {};  // 리터럴로 생성
+
+// 하지만 obj 객체의 생성자 함수는 Object 생성자 함수다.
+console.log(obj.constructor === Object);  // true
+```
+
+객체 리터럴에 의해 생성된 객체는 Object 생성자 함수가 생성한 객체가 아니지만,<br />
+리터럴 표기법에 의해 생성된 객체도 상속을 위해 프로토타입이 필요하기 때문에 가상의 생성자 함수를 갖는다.<br />
+프로토타입은 생성자 함수와 더불어 생성되며 prototype, constructor 프로퍼티에 의해 연결되어 있기 때문이다.<br />
+다시 말해 **프로토타입과 생성자 함수는 단독으로 존재할 수 없고 언제나 쌍으로 존재한다.**
+
+<br />
+
+## 프로토타입의 생성 시점
+**프로토타입은 생성자 함수가 생성되는 시점에 더불어 생성된다.**<br />
+
+생성자 함수는 사용자 정의 생성자 함수외 자바스크립트가 기본 제공하는 빌트인 생성자 함수로 구분할 수 있다.
+
+<br />
+
+### 사용자 정의 생성자 함수와 프로토타입 생성 시점
+생성자 함수로서 호출할 수 있는 함수, 즉 constructor는 **함수 정의가 평가되어 함수 객체를 생성하는 시점**에 프로토타입도 더불어 생성된다.<br />
+non-constructor는 프로토타입이 생성되지 않는다.
+
+```js
+// 함수 정의(constructor)가 평가되어 함수 객체를 생성하는 시점에 프로토타입도 더불어 생성된다.
+console.log(Person.prototype);  // {constructor: f}
+
+// 생성자 함수
+function Person(name) {
+    this.name = name;
+}
+
+// non-constructor
+const Person2 = name => {
+    this.name = name;
+}
+
+console.log(Person2.prototype);  // undefined
+```
+
+함수 호이스팅에 의해 함수 선언문은 런타임 이전에 실행되는데 이때 프로토타입도 같이 생성된다.<br />
+생성된 프로토타입은 생성자 함수의 prototype 프로퍼티에 바인딩 되고, 오직 constructor 프로퍼티만을 갖는 객체다.<br />
+프로토타입도 객체이고 모든 객체는 프로토타입을 가지므로 프로토타입도 자신의 프로토타입을 갖는다.<br />
+생성된 프로토타입의 프로토타입은 Object.prototype이다.
+
+사용자 정의 생성자 함수는 자신이 평가되어 함수 객체로 생성되는 시점에 프로토타입이 생성되며,<br />
+생성된 푸로토타입의 프로토타입은 언제나 Object.prototype이다.
+
+<br />
+
+### 빌트인 생성자 함수와 프로토타입 생성 시점
+빌트인 생성자 함수도 빌트인 생성자 함수가 생성되는 시점에 프로토타입이 생성되는데,<br />
+빌트인 생성자 함수는 전역 객체가 생성되는 시점에 생성된다.<br />
+생성된 프로토타입은 빌트인 생성자 함수의 prototype 프로퍼티에 바인딩된다.
+
+> 전역 객체는 코드가 실행되기 이전 단계에 자바스크립트 엔진에 의해 생성되는 특수한 객체다. <br />
+> 브라우저에서는 window, node 환경에서는 global 객체를 의미한다.
+
+객체가 생성되기 이전에 생성자 함수와 프로토타입이 이미 객체화되어 존재한다.<br />
+**이후 생성자 함수 또는 객체 리터럴 표기법읋 객체를 생성하면 프로토타입은 생성된 객체의 [[Prototype]] 내부 슬롯에 할당된다.**<br />
+이로써 생성된 객체는 프로토타입을 상속받는다.
