--- a/Javascript/Deep_Dive/14. 프로토타입.md
+++ b/Javascript/Deep_Dive/14. 프로토타입.md
@@ -285,3 +285,59 @@ console.log(Person2.prototype);  // undefined
 객체가 생성되기 이전에 생성자 함수와 프로토타입이 이미 객체화되어 존재한다.<br />
 **이후 생성자 함수 또는 객체 리터럴 표기법읋 객체를 생성하면 프로토타입은 생성된 객체의 [[Prototype]] 내부 슬롯에 할당된다.**<br />
 이로써 생성된 객체는 프로토타입을 상속받는다.
+
+<br />
+
+## 객체 생성 방식과 프로토타입의 결정
+객체는 다양한 객체 생성 방식이 있지만 추상 연산 OrdinaryObjectCreate에 의해 생성된다는 공통점이 있다.
+
+추상 연산 OrdinaryObjectCreate는 필수적으로 자신이 생성할 객체의 프로토타입을 인수로 전달받는다.<br />
+그리고 자신이 생성할 객체에 추가할 프로퍼티 목록을 옵션으로 전달할 수 있다.<br />
+추상 연산 OrdinaryObjectCreate는 빈 객체를 생성한 후, 객체에 추가할 프로퍼티 목록이 인수로 전달된 경우 프로퍼티를 객체에 추가한다.<br />
+그리고 인수로 전달받은 프로토타입을 자신이 생성한 객체의 [[Prototype]] 내부 슬롯에 할당한 다음, 생성한 객체를 반환한다.<br />
+
+즉, 프로토타입은 추상 연산 OrdinaryObjectCreate에 전달되는 인수에 의해 결정되고,<br />
+이 인수는 객체가 생성될 때 객체 생성 방식에 의해 결정된다.
+
+<br />
+
+### 객체 리터럴에 의해 생성된 객체의 프로토타입
+자바스크립트 엔진은 객체 리터럴을 평가하여 객체를 생성할 때 추상 연산 OrdinaryObjectCreate를 호출한다.<br />
+이때 추상 연산 OrdinaryObjectCreate에 전달되는 프로토타입은 `Object.prototype`이다.<br />
+따라서 객체 리터럴에 의해 생성되는 객체의 프로토타입은 Object.prototype이다.
+
+<br />
+
+### Object 생성자 함수에 의해 생성된 객체의 프로토타입
+Object 생성자 함수를 인수 없이 호출하면 빈 객체가 생성된다. Object 생성자 함수를 호출할 때도 추상 연산 OrdinaryObjectCreate를 호출한다.<br />
+이때 추상 연산 OrdinaryObjectCreate에 전달되는 프로토타입은 `Object.prototype`이다.<br />
+따라서 Object 생성자 함수에 의해 생성되는 객체의 프로토타입도 Object.prototype이다.
+
+<br />
+
+### 생성자 함수에 의해 생성된 객체의 프로토타입
+new 연산자와 함께 생성자 함수를 호출하여 인스턴스를 생성하면 다른 객체 생성 방식과 마찬가지로 추상 연산 OrdinaryObjectCreate가 호출된다.<br />
+이때 추상 연산 OrdinaryObjectCreate에 전달되는 프로토타입은 생성자 함수의 prototype 프로퍼티에 바인딩되어 있는 객체다.<br />
+즉, 생성자 함수에 의해 생성되는 객체의 프로토타입은 생성자 함수의 prototype 프로퍼티에 바인딩되어 있는 객체다.
+
+<br />
+
+## 프로토타입 체인
+자바스크립트는 객체의 프로퍼티(메서드 포함)에 접근하려고 할 때 해당 객체에 접근하려는 프로퍼티가 없다면 [[Prototype]] 내부 슬롯의 참조를 따라 자신의 부모 역할을 하는 프로토타입의 프로퍼티를 순차적으로 검색한다.<br />
+이를 **프로토타입 체인**이라고 한다.<br />
+프로토타입 체인은 자바스크립트가 객체지향 프로그래밍의 상속을 구현하는 매커니즘이다.
+
+<br />
+
+프로토타입 체인의 최상위에 위치하는 객체는 언제나 Object.prototype이다.<br />
+따라서 모든 객체는 Object.prototype을 상속받는다.<br />
+**Object.prototype을 프로토타입의 체인의 종점**(end of prototype chain)이라 한다.
+
+프로토타입의 체인의 종점인 Object.prototype의 [[Prototype]] 내부 슬롯 값은 null이다.
+Object.prototype에도 없는 프로퍼티를 검색하는 경우, 에러가 아닌 undefined가 반환된다.
+
+자바스크립트 엔진은 프로토타입 체인을 따라 프로퍼티/메서드를 검색한다.<br />
+따라서 **프로토타입 체인은 상속과 프로퍼티 검색을 위한 매커니즘**이라고 할 수 있다.<br />
+반면 프로퍼티가 아닌 식별자는 **스코프 체인**에서 검색한다.<br />
+따라서 **스코프 체인은 식별자 검색을 위한 매커니즘**이라고 할 수 있다.
+이 두개는 **서로 연관없이 별도로 동작하는 것이 아니라 서로 협력하여 식별자와 프로퍼티를 검색하는 데 사용된다.**
