--- a/Javascript/Deep_Dive/14. 프로토타입.md
+++ b/Javascript/Deep_Dive/14. 프로토타입.md
@@ -341,3 +341,35 @@ Object.prototype에도 없는 프로퍼티를 검색하는 경우, 에러가 아
 반면 프로퍼티가 아닌 식별자는 **스코프 체인**에서 검색한다.<br />
 따라서 **스코프 체인은 식별자 검색을 위한 매커니즘**이라고 할 수 있다.
 이 두개는 **서로 연관없이 별도로 동작하는 것이 아니라 서로 협력하여 식별자와 프로퍼티를 검색하는 데 사용된다.**
+
+<br />
+
+## 오버라이딩과 프로퍼티 섀도잉
+프로토타입이 소유헌 프로퍼티(메서드 포함)를 `프로토타입 프로퍼티`, 인스턴스가 소유한 프로퍼티를 `인스턴스 프로퍼티`라고 부른다.<br />
+프로토타입 프로퍼티와 같은 이름의 프로퍼티를 인스턴스에 추가하면 프로토타입 체인을 따라 프로토타입 프로토타입 프로퍼티를 검색하여 프로토타입 프로퍼티를 덮어쓰는 것이 아니라<br />
+`인스턴스 프로퍼티로 추가`하고 프로토타입 프로퍼티를 `오버라이딩`한다.<br />
+이처럼 **상속 관계에 의해 프로퍼티가 가려지는 현상**을 **프로퍼티 섀도잉**이라 한다.
+
+<br />
+
+> 💡 오버라이딩 : 상위 클래스가 가지고 있는 메서드를 하위 클래스가 재정의하여 사용하는 방식 <br />
+
+프로퍼티를 삭제하는 경우에도 마찬가지로 프로토타입의 프로퍼티가 삭제되는 것이 아니라 인스톤스 프로퍼티가 삭제된다.
+
+이처럼 하위 객체를 통해 프로토타입의 프로퍼티를 변경/삭제하는 것은 불가능하다.<br />
+프로토타입 체인으로 접근하는 것이 아니라 프로토타입에 직접 접근해야 한다.
+
+```js
+Person.prototype.sayHello = function () {
+    console.log('hello');
+};
+
+delete Person.prototype.sayHello;
+```
+
+<br />
+
+## 프로토타입의 교체
+프로토타입은 임의의 다른 객체로 변경할 수 있다. 이것은 부모 객체인 프로토타입을 동적으로 변경할 수 있다는 것을 의미한다.<br />
+이러한 특징을 활용해 객체 간으 상속 관계를 동적으로 변경할 수 있다.<br />
+프로토타입은 생성자 함수 또는 인스턴스에 의해 교체할 수 있다.
