--- a/Javascript/Deep_Dive/14. 프로토타입.md
+++ b/Javascript/Deep_Dive/14. 프로토타입.md
@@ -373,3 +373,50 @@ delete Person.prototype.sayHello;
 프로토타입은 임의의 다른 객체로 변경할 수 있다. 이것은 부모 객체인 프로토타입을 동적으로 변경할 수 있다는 것을 의미한다.<br />
 이러한 특징을 활용해 객체 간으 상속 관계를 동적으로 변경할 수 있다.<br />
 프로토타입은 생성자 함수 또는 인스턴스에 의해 교체할 수 있다.
+
+<br />
+
+### 생성자 함수에 의한 프로토타입의 교체
+```js
+const Person = (function () {
+    function Person(name) {
+        this.name = name;
+    }
+
+    // 생성자 함수의 prototype 프로퍼티를 통해 프로토타입을 교체
+    Person.prototype = {
+        hello() {
+            console.log(`my name is ${this.name}`);
+        }
+    };
+
+    return Person;
+}());
+
+const me = new Person('yujuck');
+```
+Person.prototype에 객체 리터럴을 할당했다. Person 생성자 함수가 생성할 객체의 프로토타입을 객채 리터럴로 교체한 것이다.
+
+객체 리터럴에는 constructor 프로퍼티가 없다. constructor 프로퍼티는 자바스크립트 엔진이 프로토타입을 생성할 때 암묵적으로 추가한 프로퍼티다. <br />
+따라서 me 객체의 생성자 함수를 검색하면 Object가 나오게 된다.
+
+```js
+// 프로토타입 체인을 따라 Object.prototype의 constructor 프로퍼티가 검색된다.
+console.log(me.constructor === Object);  // true
+```
+
+프로토타입을 교체하면 constructor 프로퍼티와 생성자 함수 간의 연결이 파괴되는데,<br />
+프로토타입으로 교체한 객체 리터럴에 constructor 프로퍼티를 추가해 연결을 살릴 수도 있다.
+```js
+Person.prototype = {
+    constructor: Person,
+    hello() {
+        console.log(`my name is ${this.name}`);
+    }
+};
+.
+.
+.
+
+console.log(me.constructor === Object);  // false
+```
