--- a/Javascript/Deep_Dive/14. 프로토타입.md
+++ b/Javascript/Deep_Dive/14. 프로토타입.md
@@ -420,3 +420,63 @@ Person.prototype = {
 
 console.log(me.constructor === Object);  // false
 ```
+
+<br />
+
+### 인스턴스에 의한 프로토타입의 교체
+인스턴스의 `__proto__` 접근자 프로퍼티(또는 Object.getPrototypeOf)를 통해서도 프로토타입에 접근할 수 있기 때문에<br />
+`__proto__` 접근자 프로퍼티(또는 Object.setPrototypeOf)로 프로토타입을 교체할 수 있다.
+
+
+`__proto__` 접근자 프로퍼티로 프로토타입을 교체하는 것은 이미 생성된 객체의 프로토타입을 교체하는 것이다.
+```js
+function Person(name) {
+    this.name = name;
+}
+
+const me = new Person('yujuck');
+
+// 프로토타입으로 교체할 객체
+const parent = {
+    hello() {
+        console.log(`my name is ${this.name}`);
+    }
+}
+
+// me 객체의 프로토타입을 parent로 교체
+Object.setPrototypeOf(me, parent);  // me.__proto__ = parent  와 동일
+```
+이때도 교체한 객체에는 constructor 프로퍼티가 없으므로 constructor 프로퍼티와 생성자 함수 간의 연결이 파괴된다.<br />
+따라서 프로토타입의 constructor 프로퍼티로 me 객체의 생성자 함수를 검색하면 Person이 아닌 Object가 나온다.
+
+생성자 함수에 의한 프로토타입 교체 방법과의 차이점은<br />
+생성자 함수의 prototype 프로퍼티가 교체된 프로토타입을 가리키고 있었다면,
+인스턴스에 의해 교체되는 경우에는 생성자 함수의 prototype 프로퍼티가 교체된 프로토타입을 가리키지 않는다는 것이다.
+
+이것 또한 연결을 다시 살릴 수 있긴 하다.
+```js
+function Person(name) {
+    this.name = name;
+}
+
+const me = new Person('yujuck');
+
+// 프로토타입으로 교체할 객체
+const parent = {
+    constructor: Person,  // constructor 프로퍼티와 생성자 함수 연결
+    hello() {
+        console.log(`my name is ${this.name}`);
+    }
+};
+
+// 생성자 함수의 prototype 프로퍼티와 프로토타입 간의 연결을 설정
+Person.prototype = parent;
+
+Object.setPrototypeOf(me, parent);
+
+console.log(me.constructor === Person);  // true
+console.log(me.constructor === Object);  // false
+console.log(Person.prototype === Object.getPrototypeOf(me));  // true
+```
+
+하지만 프로토타입 교체를 통해 객체 간의 상속 관계를 동적으로 변경하는 것은 번거로운 작업이기 때문에 프로토타입을 직접 교체하는 것은 좋지 않다.
