--- a/Javascript/Deep_Dive/14. 프로토타입.md
+++ b/Javascript/Deep_Dive/14. 프로토타입.md
@@ -480,3 +480,76 @@ console.log(Person.prototype === Object.getPrototypeOf(me));  // true
 ```
 
 하지만 프로토타입 교체를 통해 객체 간의 상속 관계를 동적으로 변경하는 것은 번거로운 작업이기 때문에 프로토타입을 직접 교체하는 것은 좋지 않다.
+
+<br />
+
+## instanceof 연산자
+
+instanceof 연산자는 이항 연산자이고, 좌변에 객체를 가리키는 식별자, 우변에 생성자 함수를 가리키는 식별자를 피연산자로 받는다.<br />
+우변의 피연산자가 함수가 아닌 경우 TypeError가 발생한다.
+
+```js
+객체 instanceof 생성자 함수
+```
+
+<br />
+
+**우변의 생성자 함수의 prototype에 바인딩된 객체가 좌변의 객체의 프로토타입 체인 상에 존재하면 true,<br />
+그렇지 않은 경우 false로 평가된다.**
+
+```js
+function Person(name) {
+    this.name = name;
+}
+
+const me = new Person('yujuck');
+
+console.log(me instanceof Person);  // true
+console.log(me instanceof Object);  // true
+```
+
+<br />
+
+instanceof 연산자는 프로토타입의 constructor 프로퍼티가 가리키는 생성자 함수를 찾는 것이 아니라<br />
+**생성자 함수의 prototype에 바인딩된 객체가 프로토타입 체인 상에 존재하는지 확인한다.**
+
+따라서 생성자 함수에 의해 프로토타입이 교체되어 constructor 프로퍼티와 생성자 함수 간의 연결이 파괴되어도<br />
+생성자 함수의 prototype 프로퍼티와 프로토타입 간의 연결은 파괴되지 않으므로 instanceof는 아무런 영향을 받지 않는다.
+
+<br />
+
+## 직접 상속
+### Object.create에 의한 직접 상속
+Object.create 메서드는 명시적으로 프로토타입을 지정하여 새로운 객체를 생성한다.<br />
+이 메서드도 추상 연산 OrdinaryObjectCreate를 호출한다.
+
+```js
+/**
+ * 지정된 프로토타입 및 프로퍼티를 갖는 새로운 객체를 생성하여 반환한다.
+ * @param {Object} prototype 생성할 객체의 프로토타입으로 지정할 객체
+ * @param {Object} [propertiesObject] 생성할 객체의 프로퍼티를 갖는 객체
+ * @returns {Object} 지정된 프로토타입 및 프로퍼티를 갖는 새로운 객체
+*/
+Object.create(prototype[, propertiesObject])
+```
+
+Object.create 메서드는 첫 번째 매개변수에 전달한 객체의 프로토타입 체인에 속하는 객체를 생성한다.<br />
+즉, 객체를 생성하면서 직접적으로 상속을 구현하는 것이다.<br />
+이 메서드의 장점은 다음과 같다.
+- new 연산자가 없이도 객체를 생성할 수 있다.
+- 프로토타입을 지정하면서 객체를 생성할 수 있다.
+- 객체 리터럴에 의해 생성된 객체도 상속받을 수 있다.
+
+<br />
+
+Object.prototype의 빌트인 메서드들은 Object.prototype이 모든 객체의 프로토타입 체인의 종점이기 때문에 모든 객체가 상속받아 사용할 수 있다.<br />
+하지만 Object.create로 프로토타입 체인의 종점에 위치하는 객체를 생성할 수 있기 때문에 ESLint에서는 Object.prototype 빌트인 메서드를 객체가 직접 호출하는 것을 권장하지 않는다.<br />
+프로토타입 체인의 종점에 있으면 빌트인 객체를 사용할 수 없다.<br />
+따라서 직접 호출하는 것이 아니라 간접적으로 호출하는 것이 좋다.
+
+```js
+const obj = Object.create(null);
+obj.a = 1;
+
+console.log(obj.hasOwnProperty('a'));  // error
+console.log(Object.prototype.hasOwnProperty.call(obj, 'a'));  // true
