--- a/Javascript/Deep_Dive/14. 프로토타입.md
+++ b/Javascript/Deep_Dive/14. 프로토타입.md
@@ -612,3 +612,69 @@ Object.prototype.hasOwnProperty 메서드는 프로토타입 체인의 종점인
 인스턴스가 호출한 인스턴스/프로토타입 메서드 내에서 this는 인스턴스를 가리킨다.<br />
 메서드 내에서 인스턴스를 참조할 필요가 없다면 정적 메서드로 변경하여도 동작한다.<br />
 프로토타입 메서드를 호출하려면 인스턴스를 생성해야 하지만 정적 메서드는 인스턴스를 생성하지 않아도 호출할 수 있다.
+
+<br />
+
+## 프로퍼티 존재 확인
+### in 연산자
+객체 내에 특정 프로퍼티가 존재하는지 여부를 확인하는 연산자이다.
+
+```js
+/**
+ * key : 프로퍼티 키를 나타내는 문자열
+ * object: 객체로 평가되는 표현식
+*/
+key in object
+
+// ex
+const person = {
+    name: 'yujuck',
+    age: 28
+}
+
+console.log('name' in person);  // true
+console.log('toString' in person);  // true
+```
+
+in 연삱다는 확인 대상 객체의 프로퍼티 뿐만 아니라 확인 대상 객체가 상속받은 모든 프로토타입의 프로퍼티를 확인한다.<br />
+위에서 'toString'을 확인했을 때 `true`가 나온 것으로 알 수 있다.
+toString은 Object.prototype의 메서드이다.
+
+in 연산자 대신 ES6에서 도입된 Reflect.has 메서드를 사용할 수도 있다. 동작은 동일하다.
+```js
+const person = { name: 'yujuck' };
+
+console.log(Reflect.has(person, 'name'));  // true
+```
+
+<br />
+
+### Object.prototype.hasOwnProperty 메서드
+객체에 특정 프로퍼티가 존재하는지 알 수 있다.
+
+```js
+console.log(person.hasOwnProperty('name'));  // true
+console.log(person.hasOwnProperty('address'));  // false
+```
+
+인수로 전달받은 프로퍼티 키가 객체 고유의 프로퍼티 키인 경우에만 true를 반환한다.
+따라서 person 객체에서 toString을 확인해보면 false가 나온다.
+
+<br />
+
+## 프로퍼티 열거
+### for...in문
+객체의 모든 프로퍼티를 순회하며 열거할 때 for...in문을 사용할 수 있다.
+
+for...in문은 in 연산자처럼 순회 대상 객체의 프로퍼티뿐만 아니라 상속받은 프로토타입의 프로퍼티까지 열거한다고 한다.<br />
+하지만 객체를 for...in문으로 열거할 때 toString과 같은 Object.prototype의 프로퍼티가 열거되지 않는데,<br />
+그 이유는 열거할 수 없도록 정의된 프로퍼티이기 때문이다.([[Enumerable]]가 false)
+
+<br />
+
+따라서 for...in문을 정확히 표현하자면 다음과 같다.<br />
+**for...in문은 객체의 프로토타입 체인 상에 존재하는 모든 프로토타입의 프로퍼티 중에서 어트리뷰트 [[Enumerable]] 값이 true인 프로퍼티를 순회하며 열거한다.**
+
+<br />
+
+또한 키가 Symbol인 프로퍼티는 열거하지 않는다.
