--- a/TIS/220908-PM2.md
+++ b/TIS/220908-PM2.md
@@ -6,7 +6,7 @@
 pm2에 대해서 좀 더 알아볼 겸 공홈 들어가서 설명 좀 읽어보았다.
 
 # PM2 정의
-공식 홈페이지에서는 pm2와 pm2를 시작하는 것에 대해 이렇게 말하고 있다.
+공식 홈페이지에서는 pm2를 다음과 같이 설명하고 있다.
 
 ```
 PM2 is a daemon process manager that will help you manage and keep your application online. 
@@ -14,15 +14,11 @@ Getting started with PM2 is straightforward, it is offered as a simple and intui
 
 pm2는 Node.js application을 online으로 관리하고 유지하는 데 도움을 주는 프로세스 관리자이다.pm2를 시작하는 것은 간단하고 npm을 통해 설치할 수 있는, 간단하고 직관적인 CLI로 제공된다.
 ```
+정의는... 이게 끝..이 아닐까?
+<br />
 
-pm2에 대한 설명은 사실 별거 없다..<br />
-정의에 대해서는 이정도만 알고 있으면 될 것 같고 <br />
-알아야 할 것들, 공식에서 알려주고 있는 내용들 모두 pm2에서 제공하고 있는 기능에 대한 얘기이다.
-
-지금 찾아야 하는 내용은<br />
+앞으로 찾아봐야하는 내용은<br />
 nvm을 사용해서 node를 버전별로 관리한다 하더라도 특정 node 버전에 pm2를 설치하는 것이 아닌<br />
 OS 레벨에 설치할 수 있는지를 찾아봐야 한다.<br />
 근데 그게 가능한가..??
-npm 으로 설치하는데 .. 
-
-
+npm 으로 설치하는데.. 
